package repositories;

import responses.Response;

public interface CodeRepositoryInterface {
    Response getCode();
}
