@startuml
'https://plantuml.com/class-diagram

interface Response{
    + Boolean isSuccessful()
}
interface CodeIterator{
    + Boolean hasNext();
    + Response getNext();
}
interface CodeRepositoryInterface{
    + Response getCodeIterator()
}
class MockCodeRepository{
    + Response getCodeIterator()
}

Response <.. CodeRepositoryInterface
CodeIterator <.. CodeRepositoryInterface

CodeRepositoryInterface<|..MockCodeRepository

@enduml